--- a/style.css
+++ b/style.css
@@ -220,12 +220,7 @@ body {
         left: 0;
         width: 100%;
         height: 120%;
-        background-image: linear-gradient(
-          to right,
-          #ff512f 0%,
-          #ff512f 51%,
-          #dd2476 100%
-        );
+        background-color: white;
         z-index: -3;
         transform: skewY(-5deg);
     }
