--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ body {
     padding: 15px;
 }
 .food__card {
+    border-radius: 8px;
     background-color: #f9f9f9;
     margin-bottom: 20px;
     box-shadow: 0 25px 50px -12px rgb( 0 0 0 / 25%);
@@ -109,6 +110,15 @@ body {
     border-radius: 8px 8px 0 0;
     width: 100%;
 }
+.food__list__view__more {
+    margin: 2rem 0;
+    transition: 0.3s;
+    text-align: center;
+    color: #fff;
+    padding: 1rem;
+    border-radius: 6px;
+    background: linear-gradient(to right, #ff512f 0%, #dd2476 51%, #ff512f 100%);
+  }
 
 .explore__menu__text {
     margin-top: 30px;
@@ -222,6 +232,11 @@ body {
     list-style: none;
     color: white;
 }
+.author {
+    font-size: 10px;
+    color: whitesmoke;
+    background-color: black;
+}
 
 @media (min-width: 768px) {
     .explore__menu__lists {
@@ -322,7 +337,12 @@ body {
         right: 8%;
         
     }
-    
+    .food__list__view__more {
+        background: none;
+      }
+    .author {
+        font-size: 15px;
+    }
 }
 
 @media (min-width: 1024px) {
@@ -380,4 +400,14 @@ body {
     .logo {
         width: 30%;
     }
+    .food__list__view__more {
+        margin-top: 4rem;
+        cursor: pointer;
+      }
+      .food__list__view__more:hover {
+        background: #fff;
+        color: #dd2476;
+        margin: 4rem 20rem;
+        box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+      }
 }
